--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": "~2.2",
+        "jms/metadata": "1.4.x-dev"
     },
     "require-dev": {
         "symfony-cmf/testing": "1.0.*"
