Selecting a node works with dynatree

--- a/Resources/public/bower.json
+++ b/Resources/public/bower.json
@@ -5,6 +5,7 @@
   "dependencies": {
       "jquery": "latest",
       "jquery-ui": "latest",
-      "fancytree": "latest"
+      "fancytree": "latest",
+      "dynatree": "latest"
   }
 }
