--- a/Tests/Resources/app/config/treeui.yml
+++ b/Tests/Resources/app/config/treeui.yml
@@ -1,5 +1,8 @@
 cmf_tree_ui:
     tree:
-        default:
+        phpcrodm:
             model_service_id: cmf_tree_ui.model.phpcr_odm
             view_service_id: cmf_tree_ui.view.fancy_tree
+        dynatree:
+            model_service_id: cmf_tree_ui.model.phpcr_odm
+            view_service_id: cmf_tree_ui.view.dynatree
