--- a/Resources/config/routing/tree.yml
+++ b/Resources/config/routing/tree.yml
@@ -4,8 +4,14 @@ _cmf_tree_ui_view:
         _controller: cmf_tree_ui.controller.tree:viewAction
 
 _cmf_tree_ui_children:
-    pattern: /_cmf_tree_ui/children/{tree_name}/{node_id}/children
+    pattern: /_cmf_tree_ui/tree/{tree_name}/{node_id}/children
     defaults:
         _controller: cmf_tree_ui.controller.tree:childrenAction
         node_id: /
+    requirements: { node_id: .* }
+
+_cmf_tree_ui_delegate:
+    pattern: /_cmf_tree_ui/tree/{tree_name}/delegate
+    defaults:
+        _controller: cmf_tree_ui.controller.tree:delegateAction
     requirements: { node_id: .* }
