--- a/Tests/Resources/app/config/treeui.yml
+++ b/Tests/Resources/app/config/treeui.yml
@@ -14,6 +14,10 @@ cmf_tree_ui:
             model: phpcr_odm
             view: dyna_tree
 
+        elfinder_phpcrodm:
+            model: phpcr_odm
+            view: el_finder
+
         # Model: Filesystem
         fancytree_filesystem:
             model: filesystem
