Context menu works for fancy tree
- Not sure how best to make this customizable - custom template?
- Translation doesn't seem to be working

--- a/Resources/config/routing/tree.yml
+++ b/Resources/config/routing/tree.yml
@@ -25,3 +25,10 @@ _cmf_tree_ui_move:
         # cmf_tree_ui_target_node_id
         # cmf_tree_ui_before
     requirements: { cmf_tree_ui_node_id: .* }
+
+_cmf_tree_ui_delete:
+    pattern: /_cmf_tree_ui/{cmf_tree_ui_tree_name}/delete/{cmf_tree_ui_node_id}
+    defaults:
+        _controller: cmf_tree_ui.controller.tree:processAction
+        cmf_tree_ui_command: delete
+    requirements: { cmf_tree_ui_node_id: .* }
