All Classnames support for annotation driver

--- a/Tests/Resources/app/config/treeui.yml
+++ b/Tests/Resources/app/config/treeui.yml
@@ -1,4 +1,7 @@
 cmf_tree_ui:
+    metadata:
+        annotated_document_paths:
+            CmfTreeUiBundle: Tests/Resources/Document
     model:
         phpcr_odm:
             root: /test
