--- a/Tests/Resources/app/config/treeui.yml
+++ b/Tests/Resources/app/config/treeui.yml
@@ -1,3 +1,8 @@
+twig:
+    form:
+        resources:
+            - 'CmfTreeUiBundle:Form:fields.html.twig'
+
 cmf_tree_ui:
     metadata:
         annotated_document_paths:
